[package]
name = "addrsetd"
description = "Daemon for managing sets of network addresses"
version = "0.0.1"
authors = ["Ivan Mironov <mironov.ivan@gmail.com>"]
license = "GPL-3.0"
keywords = ["daemon", "network"]
categories = []
publish = false
repository = "https://github.com/im-0/addrsetd"
documentation = "https://github.com/im-0/addrsetd"

[dependencies]
failure = { version = "*", default_features = false, features = ["std"] }
isatty = { version = "*", default_features = false }
log4rs = { version = "*", default_features = false, features = ["all_components"] }
structopt = { version = "*", default_features = false }
structopt-derive = { version = "*", default_features = false }

[dependencies.log]
version = "*"
default_features = false
features = ["release_max_level_debug"]
